--- a/week_13/01.md
+++ b/week_13/01.md
@@ -1,56 +1,75 @@
 ---
-title: "01: [PAPER NAME] by [AUTHOR NAME(S)]"
-date: 2020-08-30
+title: "01: [Acoustic Integrity Codes: Secure Device Pairing Using Short-Range Acoustic Communication] by [Florentin Putz, Flor Álvarez, Jiska Classen]"
+date: 2020-11-16
 type: book
 commentable: true
-
 # Provide the name of the presenter
-summary: "Presenter(s): [PRESENTER NAME(S)]"
-
+summary: "Presenter(s): Dawei Yang and Thomas Yang"
 # Provide other tags that describe the paper
 tags:
 - teaching
 - ee693e
 ---
-
 ***
 ## Paper Summary
-[PROVIDE ONE PARAGRAPH SUMMARIZING OF THE PAPER (>100 WORDS)]
+In their study, the authors designed a Secure Device Pairing (SDP) scheme that uses short-range acoustic communication to transmit keys. First, they proposed Acoustic Integrity Codes (AICs) for key message authentication and integrity. They showed that using a white gaussian noise as the carrier signal, it’s hard to conduct signal cancellation attack outside the secured area when they used signals with autocorrelation. Furthermore, the ternary decision function used to determine if the incoming signal is a 1, 0, or unknown, prevents overshadowing attack. They evaluated the security and robustness with MATLAB and Android implementations. Based on their results, lower bit rates, higher signal-to-noise ratios, and higher bandwidths lower the bit error rate. Also, they implemented an Android app for proof-of-concept.
 ***
-
 ## Presentation
-{{< youtube w7Ft2ymGmfc >}}
-
-[PROVIDE A VIDEO RECORD OF YOUR PRESENTATION]
+{{< youtube 8XBhq8Vq_7M>}}
 ***
-
 ## Review
 ### Strengths
 [SUMMARIZE THE STRENGTHS OF THE PAPER IN FULL SENTENCES (>50 WORDS)]
-- [STRENGTHS 01]
-- [STRENGTHS o1]
-
+- This paper includes a figure that shows how AICs constructs, transmits, receives, and decodes with a complete example.
+- Acoustic communication requires minimal user interaction and can be implemented as user space software on existing off-the-shelf devices as speakers and microphones are commonplace on mobile devices.
+ 
 ### Weaknesses
 [SUMMARIZE THE WEAKNESSES OF THE PAPER IN FULL SENTENCES (>50 WORDS)]
-- [WEAKNESSES 01]
-- [WEAKNESSES o1]
-
-### Detalied Comments
-[PROVIDE DETAILED EXPLIANATION OF THE STRENGHS AND WEAKNESSES LISTED ABOVE (>
+- Acoustic communication is only secure in a private scenario, where the user knows that the area around them is secure, as compared to a public place, where others can reduce the effective range of transmission.
+ 
+### Detailed Comments
+[PROVIDE DETAILED EXPLANATION OF THE STRENGTHS AND WEAKNESSES LISTED ABOVE (>
 200 WORDS)]
-
+Using AICs for SDP is a very simple and reliable way to exchange keys. Since acoustics were never really explored before as a form of out-of-band channel, it is an emerging form for security applications. Compared to previous forms of SDP, such as Bluetooth, which requires the user to visually confirm two numerical codes so that the correct devices are paired, AICs require little user interaction, only needing to place the two devices close to each other, which leaves less space for human error for man-in-the-middle attacks. Although this method does not work well in a public and crowded environment where noise and the potential for attackers are high, finding a relatively private environment is an easy task to do and perform AIC before entering a public environment.
+ 
 ### Implementation
-[PROVIDE DETAILED EXPLIANATION OF THE CODES/DATA PROVIDED BY THE PAPER] (>
-200 WORDS)]
+The basic idea of AIC is to use Manchester coding to encode the input data, which replaces 0 by 01 and 1 by 10. Delimiter will be added to split each byte. Then, the digital signal will be converted to the bandpass modulated signal and transmitted by using a speaker. Reception will remove the noise by using a bandpass filter and determine the frame and slot boundaries based on the delimiter. Reception then measures the power of each slot and applies the ternary decision function to demodulate the data.
+They implemented AICs in MATLAB and Android. You can simulate AICs using MATLAB by creating an artificial white Gaussian noise channel, and sending the AICs across this channel. Along with having Android implementations of AICs which can communicate with other Android devices with the same application, the incoming signal can also be saved into an audio file for offline analysis.
 [PROVIDE LINK(S) TO THE CODES/DATA PROVIDED BY THE PAPER](https://github.com/gustybear-teaching/course_ee693e_2020_fall)
-
 ### Experimentation
 [PROVIDE FIGURES/TABLE/WRITTEN-PROOF FROM THE PAPER]
-
 {{< figure src="https://github.com/gustybear-teaching/course_ee693e_2020_fall/raw/main/week_13/images/example.png" title="[RESULTS FROM THE PAPER]" width="300" >}}
-
-[(OPTIONAL) PROVIDE FIGURES/TABLE/WRITTEN-PROOF FROM YOUR OWN EXPERIMENT]
-
-{{< figure src="https://github.com/gustybear-teaching/course_ee693e_2020_fall/raw/main/week_13/images/example.png" title="[RESULTS FROM YOU]" width="300" >}}
-
-[DISCUSS THE DIFFERENCES AND CAUSES BETWEEN RESULTS, IF ANY]
+Replicate\
+Downloaded the source code from https://github.com/seemoo-lab/aic-prototype and built the apk file. Installed this apk in three Android phones.
+- Case 1: one as reception and one as transmission. As shown in Figure X, the receiver decoded the message correctly.
+{{< figure src="https://github.com/gustybear-teaching/course_ee693e_2020_fall/raw/main/week_13/images/normal.png" title="[Normal Case]" width="300" >}}
+ 
+- Case 2: one receiver, one transmitter and one attacker. Binary Decision Function shows a message that some of those bits had been flipped compared to the result in Case 1. However, Ternary Decision Function detects this message had been modified.
+{{< figure src="https://github.com/gustybear-teaching/course_ee693e_2020_fall/raw/main/week_13/images/attack.png" title="[Attack Case]" width="300" >}}
+ 
+- Discussion:
+Note that the app is sensitive to the environment, so we need to find a quiet place. Based on the results above, we can conclude that the attacker mode conducted an overshadowing attack. The original data had been modified, and the binary decision function was not able to identify that message had been alternated. However, the ternary indicated all bits were error because the power of the signals above or below the threshold. The results were exactly the same as they showed in their paper.
+ 
+### Questions
+(1) What is the range of the SDP? Would this be secure in noisy and crowded settings considering a static threshold?
+The effective range of the SDP for AICs is 40 centimeters, but by performing SDP at a closer range will increase the secure range, as the signal can be transmitted more clearly. This would NOT be secure in a noisy and crowded setting, as the noise can easily overcome the static threshold, such that SDP is ineffective.
+   
+(2) If I pair two different AIC devices at the same time, how does each device know who is who?
+You do not pair two AIC devices at the same time, you would pair it one after the other. Since AIC is a form of SDP, its purpose is to exchange a key so they can create a secure encrypted transmission on another channel, such as bluetooth or Wi-Fi.
+ 
+(3) What is the benefit to using this for IoT compared to other, more common short range communication like BLE?
+One benefit of using this over other forms of communication such as BLE is the availability of this implementation. A majority of mobile devices are equipped with a speaker and microphone, making it a widely available form of SDP.
+ 
+Another benefit AIC has over BLE is user interaction, as AIC only requires the user to keep the two devices together for a short period of time, where as BLE requires some sort of user verification, such as in the form of comparing two numerical keys, to ensure it is the device you want to pair it to.
+ 
+(4) What are the advantages of short-range acoustic communication compared to NFC?
+As stated in question 3, NFC is not widely implemented currently in a large range of mobile devices. So AIC has the advantage of being widely available to many devices.
+ 
+(5) Would you think the age of a phone (degrading speakers/mic) would have an appreciable impact on the bit error rate?
+I don’t think it would have an appreciable impact on the bit error rate, unless there is a major problem with either speaker or microphone that would cause it to malfunction. Even slight degradation will likely not have an impact, as we are relying on the power at certain frequencies, which degradation will have an insignificant impact to.
+ 
+(6) What is the feasibility of acoustic transmission with current hardware systems? How would this affect the durability of the speaker?
+Acoustic transmission is a feasible solution, as speakers and microphones are readily available on a majority of hardware systems, but the requirement is that at least one of these devices is mobile, such that it can be placed in close proximity with the other device. As long as acoustic codes used are within the speaker’s rated frequencies and power, it will have no impact on the durability of the speaker.
+ 
+(7) Is this proof-of-concept applicable to typical IoT device authentication? If so, do you foresee any issues in adapting this method?
+This is applicable to typical IoT device authentication, and applications have been created for Android which shows the feasibility of AICs as device authentication. We do not foresee any issues in adapting this method, as it is a simple and widely available form of authentication.
